ARROW-15076: [C++][Gandiva] Fix allocation of AES {en,de}cryption result

Closes #12146 from pitrou/ARROW-15076-gandiva-aes

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Krisztián Szűcs <szucs.krisztian@gmail.com>